loopfor.LoopFor.scala.error
Compilation error:
LoopFor:1: error: Missing closing brace `}' assumed here
var compteur = 0
^LoopFor:12: error: ')' expected but '}' found.
}
^